[gd_scene load_steps=2 format=3 uid="uid://ork6sesx187k"]

[ext_resource type="Script" path="res://Scripts/Configuration.gd" id="1_4ic02"]

[node name="Configuration" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ic02")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 2

[node name="EnableConfiguration" type="CheckButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Включить настройки"

[node name="CloseConfiguration" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Закрыть настройки"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/EnableConfiguration" to="." method="_on_enable_configuration_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseConfiguration" to="." method="_on_close_configuration_pressed"]
